[package]
name = "atmega32u4-pwm-fan-controller-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fanctl"
path = "src/main.rs"

[dependencies]
btleplug = "0.10.5"
structopt = "0.3.26"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.3.2"
